--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script src="../addons/user_tools/statics/js/jquery.min.js"></script>
 </html>
